--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  dev_build:
+  path:
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
