--- a/app_bloc/pubspec.yaml
+++ b/app_bloc/pubspec.yaml
@@ -20,7 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run:
-  dev_test: '>=0.13.3+11'
+  dev_build: '>=0.13.3+11'
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
