--- a/app_prefs/pubspec.yaml
+++ b/app_prefs/pubspec.yaml
@@ -39,7 +39,7 @@ dev_dependencies:
     version: '>=0.1.0'
   flutter_test:
     sdk: flutter
-  dev_test:
+  dev_build:
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
