--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -17,7 +17,7 @@ dev_dependencies:
     version: '>=0.7.8'
 
   test:
-  dev_test:
+  dev_build:
   tekartik_lints:
     git:
       url: https://github.com/tekartik/common.dart
