--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
     path: ../common_test_app_lib
   tekartik_common_web_test_app_lib:
     path: ../common_web_test_app_lib
+  tekartik_navigator_test_app_lib:
+    path: ../navigator_test_app_lib
   tekartik_app_flutter_common_web_utils:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
@@ -92,6 +94,8 @@ dependency_overrides:
     path: ../../app_common
   tekartik_app_flutter_common_web_utils:
     path: ../../app_common_web
+  tekartik_app_navigator_flutter:
+    path: ../../app_navigator
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
