--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite_common_ffi_web:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: '>=1.0.0'
