--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  idb_shim: '>=2.0.0+1'
-  idb_sqflite: '>=1.1.1'
+  idb_shim: '>=2.6.1+6'
+  idb_sqflite: '>=1.3.3+5'
   sqflite: '>=2.0.0+1'
   tekartik_app_flutter_sqflite:
     git:
