--- a/app_rx_bloc/pubspec.yaml
+++ b/app_rx_bloc/pubspec.yaml
@@ -35,7 +35,7 @@ dev_dependencies:
   test: ">=1.14.0"
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ">=5.0.0"
 
 dependency_overrides:
   tekartik_app_flutter_bloc:
