--- a/app_prefs/pubspec.yaml
+++ b/app_prefs/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   path:
   process_run:
   sembast:
+  tekartik_prefs:
+    git:
+      url: https://github.com/tekartik/prefs.dart
+      ref: dart3a
+      path: prefs
 dev_dependencies:
   tekartik_app_platform:
     git:
