--- a/app_bloc/pubspec.yaml
+++ b/app_bloc/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run:
-  dev_build: '>=0.13.3+11'
+  process_run: ">=1.2.1+1"
+  dev_build: ">=1.1.0+1"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
