--- a/app_common_web/pubspec.yaml
+++ b/app_common_web/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   web: '>=0.5.0'
   flutter:
     sdk: flutter
-
+  flutter_web_plugins:
+    sdk: flutter
   tekartik_app_common_utils:
     git:
       url: https://github.com/tekartik/app_common_utils.dart
@@ -32,7 +33,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: '>=2.0.0'
+  flutter_lints: ">=5.0.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
