--- a/app_firebase_auth/pubspec.yaml
+++ b/app_firebase_auth/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run: '>=0.10.3'
+  process_run: ">=1.2.1+1"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
