--- a/app_fs/pubspec.yaml
+++ b/app_fs/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fs_shim: '>=2.3.2+1'
+  fs_shim: ">=2.3.2+3"
   path_provider:
-  process_run:
-  path:
+  process_run: ">=1.2.1+1"
+  path: ">=1.9.0"
   idb_shim:
 dev_dependencies:
   flutter_test:
