--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -11,20 +11,20 @@ dependencies:
     sdk: flutter
   idb_shim: '>=2.6.1+6'
   idb_sqflite: '>=1.3.3+5'
-  sqflite: '>=2.0.0+1'
+  sqflite: ">=2.4.0"
   tekartik_app_flutter_sqflite:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
       ref: dart3a
       path: app_sqflite
     version: '>=0.5.0'
-  path:
-  process_run:
-  sembast:
+  path: ">=1.9.0"
+  process_run: ">=1.2.1+1"
+  sembast: ">=3.7.4+3"
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dev_build:
+  dev_build: ">=1.1.0+1"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
@@ -32,7 +32,7 @@ dev_dependencies:
       path: packages/lints_flutter
     version: '>=0.1.0'
 
-  sqflite_common_ffi: any
+  sqflite_common_ffi: ">=2.3.4"
 dependency_overrides:
   tekartik_app_flutter_sqflite:
     path: ../app_sqflite
