--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path:
+  path: ">=1.9.0"
   tekartik_platform_io:
     git:
       url: https://github.com/tekartik/platform.dart
@@ -24,7 +24,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run:
+  process_run: ">=1.2.1+1"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
