--- a/app_prefs/pubspec.yaml
+++ b/app_prefs/pubspec.yaml
@@ -27,9 +27,9 @@ dependencies:
       path: prefs_browser
       ref: dart3a
     version: '>=0.1.0'
-  path:
-  process_run:
-  sembast:
+  path: ">=1.9.0"
+  process_run: ">=1.2.1+1"
+  sembast: ">=3.7.4+3"
   tekartik_prefs:
     git:
       url: https://github.com/tekartik/prefs.dart
@@ -44,7 +44,7 @@ dev_dependencies:
     version: '>=0.1.0'
   flutter_test:
     sdk: flutter
-  dev_build:
+  dev_build: ">=1.1.0+1"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
