--- a/app_roboto/pubspec.yaml
+++ b/app_roboto/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: ^3.5.0
 
 dev_dependencies:
-  test:
-  process_run:
+  test: ">=1.24.0"
+  process_run: ">=1.2.1+1"
   tekartik_lints:
     git:
       url: https://github.com/tekartik/common.dart
