--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sembast: '>=3.7.4+2'
+  sembast: ">=3.7.4+3"
   sembast_web: '>=2.4.0+3'
   sembast_sqflite: '>=2.0.0'
   path_provider:
-  path:
+  path: ">=1.9.0"
   tekartik_app_flutter_sqflite:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
@@ -26,13 +26,13 @@ dependencies:
       ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
-  sqflite_common_ffi: '>=2.3.0+4'
+  sqflite_common_ffi: ">=2.3.4"
   sqflite_common:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run:
-  sqflite:
+  process_run: ">=1.2.1+1"
+  sqflite: ">=2.4.0"
 dependency_overrides:
 
   tekartik_app_flutter_sqflite:
