--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: '>=2.3.0'
+  sqflite: ">=2.4.0"
   sqflite_common_ffi_web: '>=0.4.2'
-  sqflite_common_ffi: '>=2.3.0+4'
+  sqflite_common_ffi: ">=2.3.4"
   sqflite_common: '>=2.5.0+2'
-  process_run:
-  path:
+  process_run: ">=1.2.1+1"
+  path: ">=1.9.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
