--- a/app_widget/pubspec.yaml
+++ b/app_widget/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run:
+  process_run: ">=1.2.1+1"
 
   tekartik_common_utils:
     git:
