--- a/app_common_web/pubspec.yaml
+++ b/app_common_web/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
