--- a/app_firebase/pubspec.yaml
+++ b/app_firebase/pubspec.yaml
@@ -33,6 +33,7 @@ dependency_overrides:
 
 # The following section is specific to Flutter.
 flutter:
+resolution: workspace
 
 # To add assets to your package, add an assets section, like this:
 # assets:
