--- a/app_firebase_auth/pubspec.yaml
+++ b/app_firebase_auth/pubspec.yaml
@@ -30,6 +30,4 @@ dev_dependencies:
       ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
-dependency_overrides:
-  tekartik_app_flutter_firebase:
-    path: ../app_firebase
+resolution: workspace
