--- a/app_image/pubspec.yaml
+++ b/app_image/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
