--- a/app_navigator/pubspec.yaml
+++ b/app_navigator/pubspec.yaml
@@ -28,7 +28,5 @@ dev_dependencies:
       ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
+resolution: workspace
 
-dependency_overrides:
-  tekartik_app_flutter_bloc:
-    path: ../app_bloc
