--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -39,6 +39,7 @@ dependency_overrides:
 
 # The following section is specific to Flutter.
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
