--- a/app_rx_bloc/pubspec.yaml
+++ b/app_rx_bloc/pubspec.yaml
@@ -37,18 +37,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ">=5.0.0"
 
-dependency_overrides:
-  tekartik_app_flutter_bloc:
-    path: ../app_bloc
-  tekartik_app_rx_utils:
-    path: ../app_rx_utils
-  tekartik_app_flutter_common_utils:
-    path: ../app_common
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
