--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -33,16 +33,13 @@ dev_dependencies:
     sdk: flutter
   process_run: ">=1.2.1+1"
   sqflite: ">=2.4.0"
-dependency_overrides:
-
-  tekartik_app_flutter_sqflite:
-    path: ../app_sqflite
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
