--- a/example/app_plugin_test_app_lib/pubspec.yaml
+++ b/example/app_plugin_test_app_lib/pubspec.yaml
@@ -42,14 +42,10 @@ dev_dependencies:
       path: packages/lints_flutter
     version: '>=0.1.0'
 
-dependency_overrides:
-  tekartik_app_flutter_plugin:
-    path: ../../app_plugin
-  tekartik_app_platform:
-    path: ../../app_platform
 
 
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
