--- a/example/idb_test_app_lib/pubspec.yaml
+++ b/example/idb_test_app_lib/pubspec.yaml
@@ -42,14 +42,8 @@ dev_dependencies:
       path: packages/lints_flutter
     version: '>=0.1.0'
 
-dependency_overrides:
-  tekartik_app_flutter_idb:
-    path: ../../app_idb
-  tekartik_app_platform:
-    path: ../../app_platform
-  tekartik_app_flutter_sqflite:
-    path: ../../app_sqflite
 flutter:
+resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
