--- a/app_widget/pubspec.yaml
+++ b/app_widget/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  uses-material-design: true
 resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
