fix roboto test

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ workspace:
   - example/image_test_app_lib
   - example/navigator_test_app_lib
   - example/prefs_test_app_lib
+  - example/roboto_test_app_lib
   - example/sembast_test_app_lib
   - example/sqflite_test_app_lib
   - example/test_app
