--- a/example/roboto_test_app_lib/pubspec.yaml
+++ b/example/roboto_test_app_lib/pubspec.yaml
@@ -1,17 +1,7 @@
-name: tekartik_app_flutter_utils_test_app
-description: flutter utils test app
+name: tekartik_app_roboto_test_app_lib
+description: Widget test app lib
+version: 0.0.1
 publish_to: none
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
 
 environment:
   sdk: ^3.6.0
@@ -19,39 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite_common_ffi_web: '>=0.4.5+1'
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ">=1.0.8"
-  tekartik_prefs_test_app_lib:
-    path: ../prefs_test_app_lib
-  tekartik_idb_test_app_lib:
-    path: ../idb_test_app_lib
-  tekartik_sqflite_test_app_lib:
-    path: ../sqflite_test_app_lib
-  tekartik_fs_test_app_lib:
-    path: ../fs_test_app_lib
-  tekartik_sembast_test_app_lib:
-    path: ../sembast_test_app_lib
-  tekartik_widget_test_app_lib:
-    path: ../widget_test_app_lib
-  tekartik_app_plugin_test_app_lib:
-    path: ../app_plugin_test_app_lib
-  tekartik_common_test_app_lib:
-    path: ../common_test_app_lib
-  tekartik_common_web_test_app_lib:
-    path: ../common_web_test_app_lib
-  tekartik_navigator_test_app_lib:
-    path: ../navigator_test_app_lib
-  tekartik_image_test_app_lib:
-    path: ../image_test_app_lib
-  tekartik_app_roboto_test_app_lib:
-    path: ../roboto_test_app_lib
-  tekartik_app_flutter_common_web_utils:
+  tekartik_app_flutter_common_utils:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
       ref: dart3a
-      path: app_common_web
+      path: app_common
+    version: '>=0.1.0'
+  tekartik_app_image_flutter:
+    git:
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      ref: dart3a
+      path: app_image
     version: '>=0.1.0'
   tekartik_test_menu_flutter:
     git:
@@ -59,37 +27,40 @@ dependencies:
       ref: dart3a
       path: test_menu_flutter
     version: '>=0.2.3'
+  tekartik_common_utils:
+    git:
+      url: https://github.com/tekartik/common_utils.dart
+      ref: dart3a
+    version: '>=0.2.3'
+  tekartik_app_flutter_widget:
+    git:
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      ref: dart3a
+      path: app_widget
+    version: '>=0.1.0'
+  tekartik_app_platform:
+    git:
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      ref: dart3a
+      path: app_platform
+    version: '>=0.1.0'
   tekartik_app_roboto:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
       ref: dart3a
       path: app_roboto
-  tekartik_app_flutter_sqflite:
-    git:
-      url: https://github.com/tekartik/app_flutter_utils.dart
-      ref: dart3a
-      path: app_sqflite
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dev_build: ">=1.1.0+2"
-  path: ">=1.9.0"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
       ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
-  process_run: ">=1.2.1+1"
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter.
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   fonts:
     - family: Roboto
@@ -128,19 +99,18 @@ flutter:
         # - asset: packages/tekartik_app_roboto/fonts/RobotoCondensed/RobotoCondensed-Black.ttf
         #  weight: 900
 resolution: workspace
-
-  # To add assets to your application, add an assets section, like this:
+  # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  #
+  # For details regarding assets in packages, see
+  # https://flutter.dev/assets-and-images/#from-packages
+  #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
+  # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
@@ -157,3 +127,5 @@ resolution: workspace
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  # For details regarding fonts in packages, see
+  # https://flutter.dev/custom-fonts/#from-packages
