--- a/app_url_launcher/pubspec.yaml
+++ b/app_url_launcher/pubspec.yaml
@@ -1,56 +1,44 @@
-name: tekartik_app_flutter_sembast
-description: Sembast for flutter (Web, Mobile & Desktop)
-version: 0.5.1
+name: tekartik_app_url_launcher_flutter
+description: "URL launcher helper"
+version: 0.0.1
 publish_to: none
 
 environment:
   sdk: ^3.9.0
+  flutter: ">=1.17.0"
 
 dependencies:
+  url_launcher: ">=6.3.2"
   flutter:
     sdk: flutter
-  sembast: ">=3.7.4+3"
-  sembast_web: '>=2.4.0+3'
-  sembast_sqflite: '>=2.0.0'
-  path_provider:
-  path: ">=1.9.0"
-  tekartik_app_flutter_sqflite:
+  tekartik_app_flutter_common_utils:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
       ref: dart3a
-      path: app_sqflite
-    version: '>=0.5.0'
-  sqflite_common_ffi: ">=2.3.4"
-  sqflite_common:
-dev_dependencies:
-  tekartik_lints_flutter:
-    git:
-      url: https://github.com/tekartik/common_flutter.dart
-      ref: dart3a
-      path: packages/lints_flutter
+      path: app_common
     version: '>=0.1.0'
+dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run: ">=1.2.1+1"
-  sqflite: ">=2.4.0"
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter.
+# The following section is specific to Flutter packages.
 flutter:
 resolution: workspace
 
   # To add assets to your package, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  # https://flutter.dev/to/asset-from-package
   #
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  # https://flutter.dev/to/resolution-aware-images
 
   # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -70,4 +58,4 @@ resolution: workspace
   #         weight: 700
   #
   # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+  # https://flutter.dev/to/font-from-package
