chore: update SDK and dependency versions

--- a/app_intl/pubspec.yaml
+++ b/app_intl/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: ^3.9.0
+  sdk: ^3.10.0
   flutter: ">=1.17.0"
 
 dependencies:
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ">=6.0.0"
 
 # tmp
 dependency_overrides:
