--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -4,13 +4,13 @@ version: 0.4.1
 publish_to: none
 
 environment:
-  sdk: ^3.9.0
+  sdk: ^3.10.0
 
 dependencies:
   flutter:
     sdk: flutter
-  idb_shim: '>=2.6.1+6'
-  idb_sqflite: '>=1.3.3+5'
+  idb_shim: '>=2.7.1-3'
+  idb_sqflite: '>=1.3.6-1'
   sqflite: ">=2.4.0"
   tekartik_app_flutter_sqflite:
     git:
