--- a/app_rx_bloc/pubspec.yaml
+++ b/app_rx_bloc/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ^3.9.0
+  sdk: ^3.10.0
   flutter: ">=1.17.0"
 
 dependencies:
@@ -31,7 +31,7 @@ dev_dependencies:
   test: ">=1.24.0"
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ">=6.0.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
