feat: add initial implementation of tekartik_app_dev_menu_flutter with configuration and main menu setup

--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
       path: app_sqflite
+  tekartik_app_dev_menu_flutter:
+    git:
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      path: app_dev_menu
 dev_dependencies:
   flutter_test:
     sdk: flutter
